templates/style.scss
/* ... */
.pure-button-normal {
    background-color: #fff;
    box-sizing: border-box !important;
    border: 1px solid $color-border;
}

.description {
    font-family: $font-family-serif;
}

// rustdoc overrides
div.rustdoc {
    font-family: $font-family-serif;
    padding: 10px 15px 20px 15px;
}

.sidebar {
    top: 34px;
    left: 0;
}

body {
    padding: 0;
    margin: 0;
}


// this is a super nasty override for help dialog in rustdocs
// see #52 for details
body.blur > :not(#help) {
    filter: none;
    -webkit-filter: none;
}

body.blur > div.nav-container > *,
body.blur > div.cratesfyi-package-container > *,
body.blur > div.rustdoc > :not(#help) {
    filter: blur(8px);
    -webkit-filter: blur(8px);
    opacity: .7;
}


// rustdocs have 200px sidebar and
// max-width 960px main pane
// BUT I really want to make the website centered

body {
    text-align: center;
    font: 16px/1.4 $font-family-sans;
}

pre {
    overflow: auto;
}

div.container {
    max-width: 1160px;
    margin: 0 auto;
    text-align: left;
}

div.container-rustdoc {
    max-width: 1200px;
    text-align: left;
}

div.nav-container {
    border-bottom: 1px solid $color-border;

    li {
        border-left: 1px solid $color-border;
    }

    .pure-menu-has-children>.pure-menu-link:after {
        font-size: 14px;
    }

    a {
        font-size: 14px;
        font-weight: 400;
    }

    .pure-menu-link:hover {
        color: $color-standard;
        background-color: inherit;
    }

    form.landing-search-form-nav {
        input.search-input-nav {
            float: right;
            max-width: 200px;
            border: none;
            margin: 0 1em 0 0;
            font-size: 14px;
            text-align: right;
            box-shadow: none;
            height: 33px;
            display: none;
            @media #{$media-sm} {
                display: block;
            }
        }
        input.search-input-nav:focus {
            outline: unset;
        }
    }

    .pure-menu-children {
        border: 1px solid $color-border;
        border-radius: 0 0 2px 2px;
        margin-left: -1px;
        li {
            border-left: none;
        }
    }

    // used for latest version warning
    .warn {
        color: $color-type;
    }

    .warn:hover {
        color: darken($color-type, 10%);
    }

    div.rustdoc-navigation {
        span.title {
            display: none;
            @media #{$media-sm} {
                display: inline;
            }
        }
    }
}

div.landing {
    text-align: center;
    padding-top: 30px;
    padding-bottom: 60px;

    h1.brand {
        font-size: 3em;
        margin-bottom: 10px;
    }

    form.landing-search-form {
        max-width: 500px;
        margin: 0 auto;
        padding: .4em 1em;

        div.buttons {
            margin-top: 30px;
        }
    }

}



div.recent-releases-container {
    text-align: left;
    margin-bottom: 50px;

    ul, li {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }

    ol.queue-list li {
        list-style-type: decimal;
        margin-left: 20px;
        a {
            color: $color-url;
        }
    }

    strong {
        font-weight: 500;
    }

    .release {
        display: block;
        border-bottom: 1px solid $color-border;
        padding: .4em 1em;

        @media #{$media-lg} {
            padding: .4em 0;
            margin: 0 1em;
        }
    }

    .release:hover {
        background-color: $color-background-code;
    }

    li:last-child .release {
        border-bottom: none;
    }

    .name {
        color: $color-url;
        font-weight: 500;
        white-space: nowrap;
        @media #{$media-sm} {
            text-overflow: ellipsis;
            overflow: hidden;
        }
    }

    .name:hover {
        overflow: visible;
        white-space: normal;
    }

    .build {
        font-weight: 500;
        i.fa-check {
            color: $color-macro;
        }
        i.fa-close {
            color: $color-struct;

        }
    }

    .description {
        font-family: $font-family-serif;
        font-weight: normal;
        @media #{$media-sm} {
            font-size: 1em;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }

    .description:hover {
        @media #{$media-sm} {
            overflow: visible;
            white-space: normal;
        }
    }

    .date {
        font-weight: normal;
        @media #{$media-sm} {
            text-align: right;
        }
    }

    div.pagination {
        text-align: center;
        margin: 1em;

        .pure-button {
            margin: 0;
        }
    }
}


div.package-container {
    background-color: $color-url;
    color: $color-background-code;;

    h1 {
        margin: 0;
        padding: 20px 0 0 16px;
    }
    p {
        margin: 0;
        padding: 0 0 20px 16px;
    }

    .pure-menu {

        .pure-menu-link {
            background-color: #fff;
            border-top: 1px solid $color-border;
            border-left: 1px solid $color-border;
            border-right: 1px solid $color-border;
            border-top-left-radius: 4px;
            border-top-right-radius: 4px;
            border-bottom: 2px solid $color-border;
            padding: .4em 1em;
        }

        .pure-menu-active {
            border-bottom: 2px solid #fff;
            color: $color-standard;
        }

        .pure-menu-link:hover {
            color: $color-standard;
        }
    }
}


div.package-sheet-container {
    margin-top: 10px;
    margin-bottom: 20px;

    .pure-menu-link {
        border-radius: 4px;
        padding: .2em .8em;
        font-weight: 400;
    }

    .build-success {
        color: $color-macro;
    }

    .build-fail {
        color: $color-struct;
    }
}
/* ... */

